<ScrollView 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DoctorActivity$PrescriptionFragment" >
    
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    android:orientation="vertical" >
	
	    <EditText
	        android:id="@+id/prescription_patient_name"
	        android:hint="@string/label_patients_name"
	        android:clickable="false" 
	        android:cursorVisible="false" 
	        android:focusable="false" 
	        android:fontFamily="sans-serif-light"
	        android:focusableInTouchMode="false"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10" >
	    </EditText>
	    
	    <EditText
	        android:id="@+id/prescription_patient_id"
	        android:hint="@string/label_tag_id"
	        android:fontFamily="sans-serif-light"
	        android:clickable="false" 
	        android:cursorVisible="false" 
	        android:focusable="false" 
	        android:focusableInTouchMode="false"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10" >
	    </EditText>
	    
	    <EditText
	        android:id="@+id/prescription_doctor_name"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:fontFamily="sans-serif-light"
	        android:hint="@string/label_doctors_name"
	        android:ems="10" >
	    </EditText>
	    
	    <EditText
	        android:id="@+id/prescription_problem"
	        android:hint="@string/label_problem"
	        android:fontFamily="sans-serif-light"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10" >
	    </EditText>
	    
	    <EditText
	        android:id="@+id/prescription_test"
	        android:hint="@string/label_test"
	        android:fontFamily="sans-serif-light"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10" >
	    </EditText>
	    
	    <EditText
	        android:id="@+id/prescription_medicine"
	        android:hint="@string/label_medicine"
	        android:layout_width="match_parent"
	        android:fontFamily="sans-serif-light"
	        android:layout_height="wrap_content"
	        android:ems="10" >
	    </EditText>
	    
	    <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:padding="10dip"
		        android:gravity="center"
		        android:textAppearance="?android:attr/textAppearanceSmall"
        		android:fontFamily="sans-serif-light"
		        android:text="@string/label_tag_instructions" />
	
	</LinearLayout>
	
</ScrollView>