<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".FormatTagActivity$ManualFormatFragment" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="10dip"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:fontFamily="sans-serif-light"
        android:text="@string/label_enter_rw_keys" />

    <EditText
        android:id="@+id/format_tag_section1key"
        android:hint="@string/label_section_1"
        android:singleLine="true"
        android:maxLength="6"
        android:fontFamily="sans-serif-light"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10" >
        <requestFocus />
    </EditText>
    
    <EditText
        android:id="@+id/format_tag_section2key"
        android:hint="@string/label_section_2"
        android:singleLine="true"
        android:maxLength="6"
        android:fontFamily="sans-serif-light"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10" >
    </EditText>
    
    <EditText
        android:id="@+id/format_tag_section3key"
        android:hint="@string/label_section_3"
        android:singleLine="true"
        android:fontFamily="sans-serif-light"
        android:maxLength="6"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10" >
    </EditText>
    
    <TextView
        android:layout_marginTop="10dip"
        android:gravity="center"
        android:text="@string/label_tag_instructions"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:fontFamily="sans-serif-light"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</LinearLayout>