<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".DoctorActivity$DetailsFragment" >

    <TextView
        android:gravity="center"
        android:text="@string/label_patients_information_on_tag"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:fontFamily="sans-serif-light"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
    <TextView
        android:id="@+id/doctor_details_patient_info"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:fontFamily="sans-serif-light"
        android:text="@string/label_tag_instructions"
        android:layout_marginBottom="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <TextView
        android:gravity="center"
        android:text="@string/label_patients_data_from_cloud"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:fontFamily="sans-serif-light"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
    <TextView
        android:id="@+id/doctor_details_patient_data"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:fontFamily="sans-serif-light"
        android:text="@string/label_tag_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>